syntax = "proto3";

package calculator;

option go_package = "calculatorpb";

message AddRequest {
    int32 first_num = 1;
    int32 second_num = 2;
}

message AddResponse {
    int32 sum = 1;
}

service CalculatorService {
    rpc Add(AddRequest) returns (AddResponse) {}
}